--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -20,30 +20,30 @@
       <nav class="align-items-start">
         <img src="./assets/images/logo-ANSWER.svg" alt="ANSWER-logo" class="mb-4 navbar-brand">
       <ul class="list-unstyled">
-        <li class="mb-4 ps-4 <%= current == 'Dashboard' ? 'text-success' : "" %> ">
+        <li class="mb-4 ps-4 py-1 <%= current == 'Dashboard' ? 'aside--active' : "" %> ">
           <a href="#" class="text-reset text-decoration-none">
             <span class="material-icons me-3 align-middle">assessment</span>
             Dashboard
           </a>
         </li>
-        <li class="mb-4 ps-4 <%= current == 'Question' ? 'aside--active' : "" %> ">
+        <li class="mb-4 ps-4 py-1 <%= current == 'Question' ? 'aside--active' : "" %> ">
           <a href="#" class="text-reset text-decoration-none" >
             <span class="material-icons me-3 align-middle">forum</span>
             Question</a>
         </li>
-        <li class='mb-4 ps-4 <%= current == 'Assignment' ? 'aside--active' : "" %>'><a href=<%= current == "Assignment" ? '#' : './index.html' %>  class="text-reset text-decoration-none">
+        <li class='mb-4 ps-4 py-1 <%= current == 'Assignment' ? 'aside--active' : "" %>'><a href=<%= current == "Assignment" ? '#' : './index.html' %>  class="text-reset text-decoration-none">
           <span class="material-icons me-3 align-middle">assignment</span>
           Assignment
         </a>
         </li>
-        <li class='mb-4 ps-4 <%= current == 'Course' ? 'aside--active' : "" %>'>
+        <li class='mb-4 ps-4 py-1 <%= current == 'Course' ? 'aside--active' : "" %>'>
           <a href="#" class="text-reset text-decoration-none">
             <span class="material-icons me-3 align-middle">video_library</span>
             Course
           </a>
         </li>
 
-        <li class="mb-4 ps-4 <%= current == 'Admin' ? 'aside--active' : "" %>">
+        <li class="mb-4 ps-4 py-1 <%= current == 'Admin' ? 'aside--active' : "" %>">
           <a href=<%= current == 'Admin' ? '#' : './Admin.html' %>  class="text-reset text-decoration-none">
             <span class="material-icons me-3 align-middle">people</span>
             Admin
